<resources>
    <string name="app_name">PizzaPlay</string>
    <string name="slogan">Если у вас нет аккаунта, он будет создан</string>
    <string name="logo">logo</string>
    <string name="username">Имя пользователя</string>
    <string name="play">Play</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="menu">Меню</string>
    <string name="category">Категории</string>
    <string name="basket">Корзина</string>
    <string name="account">Аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_name">Пицца Пепперони</string>
    <string name="temp_price">От 9 рублей</string>
    <string name="plus">+</string>
    <string name="temp_desc">sadfsfdasdfasdasdfsdafsdafasdfsdafafdafasdsadfsdafsadfdsadsafdsafdsafdsafsdaasdfasdfa</string>
    <string name="typeUser">Введите имя пользователя</string>
    <string name="typePassword">Введите пароль</string>
    <string name="luck">Купон на скидку</string>
    <string name="not_load">username</string>
    <string name="profile">Профиль</string>
    <string name="nol">0</string>
    <string name="pizza_name">Pizza name</string>
    <string name="delete_in">убрать ингредиенты</string>
    <string name="to_basket">В корзину</string>
    <string name="kol_zakazov">Количество заказов</string>
    <string name="status">Статус</string>
    <string name="simple_status">Новичок</string>
    <string name="example">sadffdsafdassfdasfdasdafsda</string>
</resources>