<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/slogan"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textColorHint="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slogan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:textColorHint="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_input"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Пароль"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_auth"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/play"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toTopOf="@id/password_input" />


</androidx.constraintlayout.widget.ConstraintLayout>